fixed come back for next challenge text and updated dark mode footer styles

--- a/src/index.css
+++ b/src/index.css
@@ -1112,3 +1112,8 @@ footer {
   background: rgb(102, 100, 105);
   color: black;
 }
+
+footer.dark-mode-theme {
+  background: rgb(158, 158, 158);
+  color: black;
+}
